# brainet

./: .gitignore  README.md  pyproject.toml  setup.py
brainet/: cli.py
brainet/ai/: session_summarizer.py
brainet/core/: context_capture.py
brainet/core/extractors/: git_extractor.py
brainet/storage/models/: capsule.py
tests/: conftest.py  test_ai_integration.py  test_capsule_manager.py  test_context_analyzer.py  test_context_capture.py  test_file_extractor.py  test_file_watcher.py  test_git_extractor.py  test_terminal_tracker.py  test_todo_extractor.py
